<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="active">Active</string>

    <!-- Sign In -->
    <string name="welcome">Welcome to T-Tasks</string>
    <string name="welcome_description">All your tasks beautifully organized in one place and easy to manage, so you can focus on having a most productive day :)</string>
    <string name="error_sign_in">There was an error signing in, please try again</string>
    <string name="error_sign_in_offline">Please make sure you\'re online before signing in for the first time</string>
    <string name="error_google_permissions_denied">This app needs permission to access your Google Tasks</string>
    <string name="signing_in">Signing in…</string>
    <string name="loading_tasks">Loading your tasks…</string>

    <!-- Drawer items -->
    <string name="drawer_settings">Settings</string>
    <string name="drawer_help_and_feedback">Help &amp; Feedback</string>
    <string name="drawer_about">About</string>
    <string name="sign_out">Sign out</string>
    <string name="drawer_add_account">Add Account</string>
    <string name="drawer_manage_account">Manage Account</string>

    <!-- Menus -->
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_my_order">My order</string>
    <string name="menu_sort_due_date">Due date</string>
    <string name="menu_sort_alphabetical">Alphabetical</string>

    <!-- General -->
    <string name="sort_mode_date">Date</string>

    <!-- Tasks -->
    <string name="msg_task_list_empty">Empty task list</string>
    <string name="msg_task_list_empty_extra">Start by creating a new task!</string>
    <string name="error_tasks_loading">There was an error refreshing your tasks, please try again later.</string>
    <string name="task_section_completed">Completed</string>
    <string name="task_section_active">Active</string>
    <string name="completed_count">Completed (%d)</string>

    <!-- Task Lists -->
    <string name="task_list">Task list</string>
    <string name="msg_task_lists_empty">No task lists</string>
    <string name="msg_task_lists_empty_extra">Start by creating a new task list!</string>
    <string name="error_task_lists_loading">Error loading task lists</string>
    <plurals name="task_list_size">
        <item quantity="one">%d task</item>
        <item quantity="other">%d tasks</item>
    </plurals>
    <string name="empty_task_list">Empty</string>
    <string name="new_task_list">New Task List</string>
    <string name="edit_task_list">Edit Task List</string>
    <string name="delete_task_list">Delete task list</string>
    <string name="delete_task_list_message">Are you sure you want to delete this task list? All of the tasks associated with it will be deleted as well. You will not be able to recover this task list.</string>
    <string name="error_task_list_title_missing">Please enter a title</string>

    <!-- Task Detail -->
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="due_date_not_set">No due date</string>

    <!-- Edit Task -->
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="title_activity_new_task">New Task</string>
    <string name="completed_on">"Completed on %s"</string>
    <string name="in_progress">In Progress</string>
    <string name="done">Done</string>
    <string name="completed">Completed</string>
    <string name="title">Title</string>
    <string name="set_due_date">Set due date</string>
    <string name="due_date">Due date</string>
    <string name="due_date_and_time">Due date and time</string>
    <string name="due_date_missing">No due date</string>
    <string name="due_time_all_day">All day</string>
    <string name="remove">Remove</string>
    <string name="change">Change</string>
    <string name="add_reminder">Add a reminder</string>
    <string name="reminder">Reminder</string>
    <string name="no_reminder_set">No reminder set</string>
    <string name="notes">Notes</string>
    <string name="notes_missing">No notes</string>
    <string name="error_no_title">Please enter a title</string>
    <string name="error_task_loading">There was an error loading this task, please try again</string>
    <string name="task_deleted">Task deleted</string>

    <!-- About -->
    <string name="about">About</string>
    <string name="about_description">T-Tasks is an app designed to help you manage your tasks. It expands upon the features provided by
        Google Tasks and the whole experience is delivered through the beauty of Material Design. Have a most productive day!</string>
    <string name="aboutLibraries_description_name">@string/app_name</string>
    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text">T-Tasks is an app designed to help you manage your tasks. It expands upon the features provided by Google Tasks and the whole experience is delivered through the beauty of Material Design. Have a most productive day!</string>

    <!-- Transition names -->
    <string name="transition_task_header">task_header</string>
    <string name="transition_task_title">task_title</string>
    <string name="transition_fab">fab</string>

    <!-- Content description -->
    <string name="description_delete_task">Delete task</string>
    <string name="description_return_to_task_list">Return to the task list</string>
    <string name="description_more">More</string>
    <string name="description_add_task">Add task</string>
    <string name="description_section_collapse_expand">Collapse or expand the section</string>

    <!-- Notifications -->
    <string name="channel_reminders">Reminders</string>
    <string name="channel_reminders_description">Task reminders</string>
    <string name="task_due">Task due: %s</string>
    <string name="notification_more_info">Tap for more information</string>
    <string name="tasks">Tasks</string>
    <string name="task_lists">Task Lists</string>

    <!-- Share -->
    <string name="share_task">Share task</string>
    <string name="extra_due_date">\nDue date: %s</string>
    <string name="extra_notes">\nNotes: %s</string>

    <string name="none">None</string>
    <string name="menu_search">Search</string>
    <string name="menu_my_account">My Account</string>

</resources>
