<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.activities.main.MainActivity">
    <item
        android:id="@id/menu_sort"
        android:icon="@drawable/ic_sort_24dp"
        android:title="@string/menu_sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@id/menu_sort_due_date"
                android:title="@string/menu_sort_due_date"/>
            <item
                android:id="@id/menu_sort_alphabetical"
                android:title="@string/menu_sort_alphabetical"/>
            <item
                android:id="@id/menu_sort_my_order"
                android:title="@string/menu_sort_my_order"/>
        </menu>
    </item>
</menu>
