<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.teo.ttasks.R" />

        <variable
            name="task"
            type="com.teo.ttasks.data.model.Task" />

        <variable
            name="taskList"
            type="com.teo.ttasks.data.model.TaskList" />
    </data>

    <LinearLayout
        android:id="@id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/BottomSheetDialogTheme">

        <FrameLayout
            android:id="@id/task_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_task_detail_header"
            android:minHeight="142dp"
            android:transitionName="@string/transition_task_header">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_icon_horizontal"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@id/task_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="bottom"
                    android:maxLines="2"
                    android:minLines="2"
                    android:text="@{task.title}"
                    android:textAppearance="@style/TextAppearance.TaskTitle.TaskDetail"
                    android:transitionName="@string/transition_task_title"
                    tools:text="Do your laundry" />

                <TextView
                    android:id="@+id/task_list_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{taskList.title}"
                    android:textAppearance="@style/TextAppearance.TaskListTitle.TaskDetail"
                    tools:text="House work" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bar"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="end"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <ImageButton
                    android:id="@+id/edit"
                    style="@style/Widget.AppCompat.ActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_delete_task"
                    android:onClick="onEditClicked"
                    app:srcCompat="@drawable/ic_edit_24dp" />

                <com.teo.ttasks.ui.OverflowMenuButton
                    android:id="@+id/more"
                    style="@style/Widget.AppCompat.ActionButton.Overflow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:id="@id/task_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:background="?android:colorBackground"
            android:padding="@dimen/text_margin">

            <TextView
                android:id="@+id/task_completion_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:completed="@{task.completedDate}"
                tools:text="In progress" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="?android:attr/listDivider" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:alignmentMode="alignBounds"
                android:columnCount="3"
                android:columnOrderPreserved="false">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowSpan="2"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/margin_edit_task"
                    android:alpha="0.54"
                    app:srcCompat="@drawable/ic_event_24dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/due_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:hint="@string/due_date_missing"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="18sp"
                    app:dueDate="@{task.dueDate}"
                    tools:text="Fri, May 20, 2016" />

                <!-- TODO: enable the due time once it is implemented -->
                <TextView
                    android:id="@+id/due_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="18sp"
                    android:visibility="gone"
                    app:dueTime="@{task.dueDate}"
                    tools:text="6:00 PM" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/due_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:columnCount="2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowSpan="2"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/margin_edit_task"
                    android:alpha="0.54"
                    app:srcCompat="@drawable/ic_notifications_24dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:hint="@string/no_reminder_set"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="18sp"
                    app:reminder="@{task.reminderDate}"
                    tools:text="1 hour before" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reminder"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_edit_task"
                    android:alpha="0.54"
                    app:srcCompat="@drawable/ic_bookmark_24dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes_missing"
                    android:text="@{task.notes}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?android:textColorPrimary"
                    tools:text="Don't forget to separate the colors!" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>
